<resources>
    <string name="app_name">DevLife</string>
    <string name="btnLogin">Iniciar Sesión</string>
    <string name="txtEmail">Email</string>
    <string name="txtPassword">Contraseña</string>
    <string name="imgBackground">Imagen de Fondo</string>
    <string name="imgLogo">Logo DevLife</string>

    <string name="tab1">Peticiones</string>
    <string name="tab2">Proyectos</string>
    <string name="tab3">Sugerencias</string>

    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>
