<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/img_login"
    tools:context="com.admin.proyectos.appdesarrolladores.Home">

    <ImageView
        android:id="@+id/imgLogo"
        app:srcCompat="@drawable/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:contentDescription="@string/imgLogo"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/txtEmail"
        android:inputType="textEmailAddress"
        android:hint="@string/txtEmail"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:textColor="@color/colorShadow"

        android:ems="8"
        android:textAlignment="center"
        android:background="@drawable/rounded_corner"

        android:maxLines="1"

        android:layout_alignParentBottom="true"
        android:layout_marginBottom="250dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/txtPassword"
        android:inputType="textPassword"
        android:hint="@string/txtPassword"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:textColor="@color/colorShadow"

        android:ems="8"
        android:textAlignment="center"
        android:background="@drawable/rounded_corner"

        android:maxLines="1"

        android:layout_marginTop="60dp"
        android:layout_alignTop="@+id/txtEmail"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/btnLogin"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_button"


        android:layout_marginTop="50dp"
        android:layout_below="@+id/txtPassword"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
