<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:background="#EEEEEE"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.admin.proyectos.appdesarrolladores.Home" >

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!-- Your scrolling content -->

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <android.support.v7.widget.Toolbar
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryDark"/>

            <android.support.design.widget.TabLayout
                android:id="@+id/tab_layout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryDark" >

                <android.support.design.widget.TabItem
                    android:text="@string/tab1"
                    android:layout_height="match_parent"
                    android:layout_width="50dp" />

                <android.support.design.widget.TabItem
                    android:text="@string/tab2"
                    android:layout_height="match_parent"
                    android:layout_width="50dp" />

                <android.support.design.widget.TabItem
                    android:text="@string/tab3"
                    android:layout_height="match_parent"
                    android:layout_width="50dp" />

            </android.support.design.widget.TabLayout>

        </android.support.design.widget.AppBarLayout>

    </android.support.design.widget.CoordinatorLayout>
